--- a/_includes/head.html
+++ b/_includes/head.html
@@ -216,9 +216,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Preload Critical Resources -->
-  <!-- CSS는 GitHub Pages fallback을 사용하므로 preload 제거 (unused preload 경고 방지) -->
-  <link rel="preload" href="{{ "/assets/js/main.js" | relative_url }}" as="script">
+  <!-- Prefetch Resources (preload 경고 방지를 위해 prefetch 사용) -->
+  <!-- main.js는 페이지 하단에서 로드되므로 prefetch로 미리 캐시 -->
+  <link rel="prefetch" href="{{ "/assets/js/main.js" | relative_url }}" as="script">
   {% comment %}OG 이미지 preload는 제거 (404 오류 및 성능 문제 방지){% endcomment %}
   {% comment %}OG 이미지는 메타 태그로만 사용하고, preload는 하지 않음{% endcomment %}
 
